--- a/index.html
+++ b/index.html
@@ -37,6 +37,45 @@
     <!-- 
     - Header
     -->
+    <header class="header active" data-header>
+      <div class="container">
+
+        <a href="#" class="logo">
+          <img src="./assets/images/logo.png" width="190" height="28" alt="Wealthome">
+        </a>
+
+        <nav class="navbar" data-navbar>
+          <ul class="nav-list">
+            <li>
+              <a href="#" class="nav-link label-medium active">Home</a>
+            </li>
+            <li>
+              <a href="#" class="nav-link label-medium">Rent</a>
+            </li>
+            <li>
+              <a href="#" class="nav-link label-medium">Sell</a>
+            </li>
+            <li>
+              <a href="#" class="nav-link label-medium">Buy</a>
+            </li>
+            <li>
+              <a href="#" class="nav-link label-medium">About</a>
+            </li>
+          </ul>
+
+          <div class="nav-wrapper">
+            <a href="#" class="btn-link label-medium">Login</a>
+            <a href="#" class="btn btn-fill label-medium">Get Started</a>
+          </div>
+        </nav>
+
+        <button class="nav-toggle-btn icon-btn" aria-label="toggle navbar" data-nav-toggler>
+          <span class="material-symbols-rounded open" aria-hidden="true">menu</span>
+          <span class="material-symbols-rounded close" aria-hidden="true">close</span>
+        </button>
+        
+      </div>
+    </header>
   </body>
 </html>
 
